--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 
     <script>
         // Подключение к серверу - ЗАМЕНИ НА СВОЙ URL СЕРВЕРА
-        const SERVER_URL = 'https://your-bunker-server.onrender.com';
+        const SERVER_URL = 'https://bunker-server-uzz6.onrender.com';
         const socket = io(SERVER_URL);
         
         // Данные для игры
@@ -1055,4 +1055,5 @@
         document.getElementById('username').value = 'Игрок' + Math.floor(Math.random() * 1000);
     </script>
 </body>
+
 </html>
