--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Бункер 42 - Онлайн игра</title>
+    <title>Бункер от markuss - Онлайн игра</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
     <style>
@@ -452,7 +452,7 @@
             <div class="header-content">
                 <div class="logo">
                     <i class="fas fa-radiation-alt"></i>
-                    Бункер 42
+                    Бункер
                 </div>
                 <div class="user-info">
                     <div id="user-display" class="username" style="display: none;"></div>
@@ -486,7 +486,7 @@
                             <i class="fas fa-sign-in-alt"></i> Присоединиться к комнате
                         </button>
                         <div style="margin-top: 1.5rem; font-size: 0.9rem; color: var(--text-secondary);">
-                            <p>Никаких паролей! Просто введите никнейм и начните играть.</p>
+                            <p>Введите никнейм и начните играть.</p>
                         </div>
                     </div>
                 </div>
@@ -595,7 +595,7 @@
     
     <footer>
         <div class="container">
-            <p>Бункер 42 - Онлайн игра на выживание © 2023</p>
+            <p>Бункер от markuss - Онлайн игра на выживание © 2025</p>
         </div>
     </footer>
 
@@ -1078,4 +1078,5 @@
     </script>
 </body>
 </html>
+
 
